[project]
name = "photofield-ai"
version = "0.1.0"
description = " Experimental machine learning API supporting Photofield"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "ftfy>=6.3.1",
    "onnxruntime>=1.22.0,<1.23.0",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "regex>=2024.11.6",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = [
    "uform",
    "pai-uform",
]
